2003-09-26  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (RealGetWindowClassA[AW]): Add function.

	* lib/user32.def (RealGetWindowClassA[AW]): Add function.

2003-09-26  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h [WINVER >= 0x0500] (RegisterDeviceNotification[AW],
	DEVICE_NOTIFY_WINDOW_HANDLE, DEVICE_NOTIFY_SERVICE_HANDLE,
	DEVICE_NOTIFY_ALL_INTERFACE_CLASSES): Add function and constants.

	* lib/user32.def (RegisterDeviceNotification[AW]): Add function.

2003-09-26  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h [WINVER >= 0x0500] (SetWinEventHook, WINEVENTPROC,
	WINEVENT_OUTOFCONTEXT, WINEVENT_SKIPOWNTHREAD, WINEVENT_SKIPOWNPROCESS,
	WINEVENT_INCONTEXT): Add function, typedef, and constants.

	* include/winable.h [WINVER < 0x0500] (SetWinEventHook, WINEVENTPROC,
	WINEVENT_OUTOFCONTEXT, WINEVENT_SKIPOWNTHREAD, WINEVENT_SKIPOWNPROCESS,
	WINEVENT_INCONTEXT): Add function, typedef, and constants.

	* include/winuser.h [_WIN32_WINNT >= 0x0500] (UserHandleGrantAccess):
	Add function.

	* lib/user32.def (SetWinEventHook, UserHandleGrantAccess):
	Add functions.

2003-09-26  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winnt.h (ACE_INHERITED_OBJECT_TYPE_PRESENT,
	ACE_OBJECT_TYPE_PRESENT): Add constants. For use with
	OBJECTS_AND_NAME structure.

2003-09-26  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/aclapi.h [_WIN32_WINNT >= 0x0501] (GetInheritanceSource[AW]):
	Add functions. Don't know what PFN_OBJECT_MGR_FUNCTS is so use
	void* instead.

	* include/accctrl.h [_WIN32_WINNT >= 0x0501] (INHERITED_FROM[AW],
	PINHERITED_FROM[AW]): Add structures.

	* lib/user32.def (GetInheritanceSource[AW]): Add functions.

2003-09-26  Corinna Vinschen  <corinna@vinschen.de>

	* include/winuser.h (FLASHWINFO, PFLASHWINFO): Define for 98/Me, too.

2003-09-25  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/version.def (LIBRARY): Quote name.
