@@ -2011,7 +2011,7 @@ extern "C" {
 #define WA_CLICKACTIVE 2
 #define ICON_SMALL 0
 #define ICON_BIG 1
-#if _WIN32_WINNT >= 0x0501
+#if (_WIN32_WINNT >= 0x0501)
 #define ICON_SMALL2 2
 #endif
 #define HBMMENU_CALLBACK ((HBITMAP) -1)
@@ -2084,6 +2084,11 @@ extern "C" {
 #define AW_ACTIVATE 0x00020000
 #define AW_SLIDE 0x00040000
 #define AW_BLEND 0x00080000
+#define DEVICE_NOTIFY_WINDOW_HANDLE 0x00000000
+#define DEVICE_NOTIFY_SERVICE_HANDLE 0x00000001
+#if(_WIN32_WINNT >= 0x0501)
+#define DEVICE_NOTIFY_ALL_INTERFACE_CLASSES 0x00000004
+#endif
 #endif /* (WINVER >= 0x0500) */
 #if (_WIN32_WINNT >= 0x0500 || _WIN32_WINDOWS >= 0x0490)
 #define ASFW_ANY ((DWORD)-1)
@@ -2117,13 +2122,9 @@ extern "C" {
 #define GMMP_USE_DISPLAY_POINTS 1
 #define GMMP_USE_HIGH_RESOLUTION_POINTS 2
 #endif
-#if (WINVER >= 0x0500)
-#define DEVICE_NOTIFY_WINDOW_HANDLE 0x00000000
-#define DEVICE_NOTIFY_SERVICE_HANDLE 0x00000001
-#if(_WIN32_WINNT >= 0x0501)
-#define DEVICE_NOTIFY_ALL_INTERFACE_CLASSES 0x00000004
+#if (_WIN32_WINNT >= 0x0501)
+#define PW_CLIENTONLY 0x00000001
 #endif
-#endif /* (WINVER >= 0x0500) */
 
 #ifndef RC_INVOKED
 typedef BOOL(CALLBACK *DLGPROC)(HWND,UINT,WPARAM,LPARAM);
@@ -3393,6 +3394,9 @@ BOOL WINAPI PostMessageW(HWND,UINT,WPARAM,LPARAM);
 void WINAPI PostQuitMessage(int);
 BOOL WINAPI PostThreadMessageA(DWORD,UINT,WPARAM,LPARAM);
 BOOL WINAPI PostThreadMessageW(DWORD,UINT,WPARAM,LPARAM);
+#if (_WIN32_WINNT >= 0x0501)
+BOOL WINAPI PrintWindow(HWND,HDC,UINT);
+#endif
 BOOL WINAPI PtInRect(LPCRECT,POINT);
 HWND WINAPI RealChildWindowFromPoint(HWND,POINT);
 UINT WINAPI RealGetWindowClassA(HWND,LPSTR,UINT);
