@@ -455,6 +455,7 @@ PostMessageW@16
 PostQuitMessage@4
 PostThreadMessageA@16
 PostThreadMessageW@16
+PrintWindow@12
 PtInRect@12
 RealChildWindowFromPoint@12
 RealGetWindowClassA@12
